Fix bug with z-index in modals

--- a/src/components/AddEditIssueModal/styles.scss
+++ b/src/components/AddEditIssueModal/styles.scss
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
 
     .add-edit-modal-header {
         font-size: 30px;
